import "card.proto";

package protocol;

option go_package = "github.com/davidhenrygao/LoginTest/proto/card";

//卡牌更新推送
message s2c_update_cards{
	repeated card cards = 1;    //卡牌列表
};
